# REST_API_on_rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.rs  docker-compose.yml
migrations/2023-10-08-093642_create_table/: down.sql  up.sql
migrations/create_db_table/: up.sql
src/: lib.rs  main.rs
test_api/: Cargo.toml
test_api/src/: main.rs
