[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "json", "postgres"] }
axum = "0.6.2"
async-session = "3.0.0"
hyper = "0.14.23"
serde_json = "1.0.91"
serde = "1.0.152" 
dotenv = "0.15.0"

