[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "json", "postgres"] }
axum = "0.6.2"
async-session = "3.0.0"
hyper = "0.14.23"
serde_json = "1.0.91"
serde = "1.0.152" 
dotenv = "0.15.0"
tower-http = {  version = "0.3.0", features = ["cors"] }
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
log = "0.4.20"
anyhow = "1.0.75"
env_logger = "0.10.0"
