[package]
name = "test_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["default", "blocking", "json"]}
serde ={ version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"]}
